@@ -19,6 +19,7 @@ enum resource_address_type {
     RESOURCE_ADDRESS_NONE = 0,
     RESOURCE_ADDRESS_LOCAL,
     RESOURCE_ADDRESS_HTTP,
+    RESOURCE_ADDRESS_PIPE,
     RESOURCE_ADDRESS_CGI,
     RESOURCE_ADDRESS_FASTCGI,
     RESOURCE_ADDRESS_AJP
