@@ -5,6 +5,7 @@ cm4all-beng-proxy (0.5.2) unstable; urgency=low
   * fork: added event for writing to the child process
   * fork: don't splice() from a pipe
   * response: don't pass request body to unfocused processor
+  * added filter type "pipe"
 
  --
 
